# kbasic

./: README.md  build.sh
kbc/: AUTHORS  Doxyfile  Makefile.am  Makefile.in  configure  configure.in  kbc.kdevelop  kbc.kdevses
kbide/: Doxyfile  Makefile  _choicedialog.cpp  _choicedialog.cpp~  _choicedialog.h  _compile.cpp  _compile.h  _compileproject.cpp  _compileproject.h  _console.h  _dbcondialog.cpp  _dbcondialog.h  _find.cpp  _find.cpp~  _find.h  _findfile.cpp  _findfile.cpp~  _findfile.h  _findfilelist.cpp  _findfilelist.h  _globallist.cpp  _globallist.h  _help copy.h  _help.cpp  _help.h  _helpwindow_shortcut.cpp  _helpwindow_shortcut.h  _importproject.cpp  _importproject.h  _infoconsole.cpp  (+206 more)
kbshared/: Makefile.am  Makefile.in  XDir.cpp  XDir.h  XFile.cpp  XFile.h  XFileInfo.cpp  XFileInfo.h  XIntMap.cpp  XIntMap.h  XIntVector.cpp  XIntVector.h  XString.cpp  XString.h  __property_acceptrichtext.h  __property_alignment.h  __property_alternatingrowcolors.h  __property_arrowtype.h  __property_autodefault.h  __property_background.h  __property_backgroundstyle.h  __property_booleanvalue.h  __property_border.h  __property_borderleft.h  __property_borderright.h  __property_caption.h  __property_checkable.h  __property_checkdisabledimage.h  __property_checked.h  __property_checkenabledimage.h  __property_checkenterimage.h  __property_checkexitimage.h  __property_checkmousedownimage.h  __property_checkmouseupimage.h  __property_commandcolor.h  __property_commands.h  __property_comment1begin.h  __property_comment1end.h  __property_comment2begin.h  __property_comment2end.h  (+305 more)
(+630 files in other folders)
