INCLUDES = -I$(top_srcdir)/. -I$(top_srcdir)/kbshared -I$(all_includes)
METASOURCES = AUTO
noinst_HEADERS = bytearray.cpp cache.cpp pcode.cpp
bin_PROGRAMS = kbc
kbc_SOURCES = XDir.cpp XFile.cpp XFileInfo.cpp XIntMap.cpp XIntVector.cpp \
	XString.cpp bytearray.cpp cache.cpp main.cpp memory_class.cpp memory_const.cpp \
	memory_enum.cpp memory_label.cpp memory_module.cpp memory_stringliteral.cpp \
	memory_sub.cpp memory_type.cpp memory_variable.cpp parser.cpp parser_binding.cpp \
	parser_builtin_function.cpp parser_builtin_sub.cpp parser_class.cpp parser_const.cpp \
	parser_control.cpp parser_enum.cpp parser_expression.cpp parser_ext.cpp \
	parser_interface.cpp parser_kbasic.cpp parser_main.cpp parser_module.cpp parser_property.cpp \
	parser_variable.cpp pcode.cpp scanner.cpp token.cpp typedef2.cpp utility.cpp
